Added picom config

--- a/backup.yaml
+++ b/backup.yaml
@@ -26,7 +26,13 @@ i3_config:
   <<: *home
   files:
     - .config/i3
+
 i3blocks:
   <<: *home
   files:
     - .config/i3blocks
+
+picom_config:
+  <<: *home
+  files:
+    - .config/picom
