--- a/backups/i3_config/.config/i3/config
+++ b/backups/i3_config/.config/i3/config
@@ -191,12 +191,16 @@ bar {
 
 
 # Custom Start up
-
+# set wallpaper
 exec_always --no-startup-id hsetroot -fill ~/Pictures/wallpapers/wallpaper2.jpg
+# activate compose key
 exec --no-startup-id "xmodmap ~/.Xmodmap"
+# swap capslock with escape
 exec --no-startup-id "/usr/bin/setxkbmap -option 'caps:swapescape'"
-
+# added picom 
+exec --no-startup-id "picom --config ~/.config/picom/config --experimental-backends"
 
 # Custom binding
 bindsym $mod+q exec i3lock-fancy -p -g
 bindsym $mod+d exec rofi -combi-modi window#drun -show combi -modi combi -show-icons
+210
