--- a/backups/i3_config/.config/i3/config
+++ b/backups/i3_config/.config/i3/config
@@ -187,8 +187,17 @@ bar {
                 urgent_workspace   #FF5555 #FF5555 #F8F8F2
                 binding_mode       #FF5555 #FF5555 #F8F8F2
         }
+        # Height in pixels
+        height 24
 }
 
+
+# Enable gaps
+for_window [class=".*"] border pixel 1
+gaps inner 25
+gaps outer 0
+smart_borders on
+smart_borders no_gaps
 
 # Custom Start up
 # set wallpaper
